kubernetes/prod/ai/ipex-llm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipexllm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipexllm
  template:
    metadata:
      labels:
        app: ipexllm
    spec:
      containers:
        - name: ipexllm
          image: intelanalytics/ipex-llm-inference-cpp-xpu:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 4096Mi
              cpu: 1000m
              gpu.intel.com/i915: 1
            limits:
              memory: 8192Mi
              cpu: 2000m
              gpu.intel.com/i915: 1
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
