kubernetes/prod/ai/ipex-llm/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ai
  name: ipexllm
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ipexllm
